[package]
name = "mdbook-rss-feed"
version = "0.1.0"
edition = "2021"

[lib]
name = "mdbook_rss_feed"
path = "src/lib.rs"

[[bin]]
name = "mdbook-rss-feed"
path = "src/bin/mdbook-rss-feed.rs"

[dependencies]
clap = {version = "4", features = ["derive"]}
anyhow = "1"
walkdir = "2"
rss = {version = "2", features = ["builders"]}
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"
chrono = {version = "0.4", features = ["serde"]}
pulldown-cmark = "0.13"
serde_json = "1"
